# pybind11_example

./: .gitignore  CMakeLists.txt  README.md  example.cpp  example_gil.cpp  example_multi.cpp  example_object.cpp
example_py/: example.py  example_gil.py  example_multi.py  example_object.py
